--- a/29_10_2021_RestApiByVladilen/package.json
+++ b/29_10_2021_RestApiByVladilen/package.json
@@ -4,8 +4,8 @@
   "description": "Rest API",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js",
-    "dev":"nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "js rest api node"
   },
   "repository": {
@@ -15,7 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
